@@ -1,5 +1,6 @@
 recursive-include photologue/locale *
 recursive-include photologue/res *.jpg
+recursive-include photologue/res/zips *.zip
 recursive-include photologue/templates/photologue *.html
 include requirements.txt
 global-exclude *.pyc
